content/documentation/mocha/8.0.0/UserGuide/en_US/tracking_basics.adoc

== Tracking Basics [[tracking_basics]]

NOTE: Some tools, parameters and techniques listed below may not be visible in Essentials mode. To see additional interface elements, switch to Classic mode. See the <<layouts, Layouts>> section for more information.

=== The Planar Tracker

Imagineer's Planar Tracker technology provides 2D tracking data by tracking planes rather than points.

The key to getting the most out of the Planar Tracker is to learn to find planes of movement in your shot which coincide with the object that you want to track or roto. Sometimes it will be obvious - other times you may have to break your object into different planes of movement. For instance if you were tracking a tabletop, you would want to draw the spline to avoid the flower arrangement in the center of the table — it is not on the same plane and will make your track less accurate.

To select a plane you simply draw a spline around it. You can be fairly loose with your spline — the Planar Tracker is intelligent enough to discard the pixel movement that doesn't conform to the movement of the majority of the pixels within the shape.

Mocha features two spline types, X-Splines and Bézier splines:

==== X-Spline
In general X-Splines work better for tracking, especially with perspective motion. We recommend using these splines where possible.

image:UserGuide/en_US/images/ToolAddXSplineLayer_2x.jpg[]

image:UserGuide/en_US/images/XSpline_001.jpg[]

==== Bézier Spline
image:UserGuide/en_US/images/ToolAddBezierSplineLayer_2x.jpg[]

image:UserGuide/en_US/images/BezierSpline_001.jpg[]

Bézier Splines are also very versatile for roto and is the industry spline standard.

==== CPU vs GPU Tracking

You can choose between a GPU or a CPU tracker in Preferences. By default, GPU is selected, but will fall back to CPU if an operation is not supported by the GPU version.

The GPU option allows you to select any supported graphics card on your system to take on the brunt of the tracking process. The resulting speed improvement is especially noticeable on high resolution footage or when tracking large areas.


=== The Relationship Between Splines and Tracking Data

One of the most important concepts to understand with the Mocha planar tracking system is that the spline movement is not the tracking data.

It's best to think of the splines you draw around objects as search areas. Here's a breakdown of how the tracking works:

. By default, any spline you draw is linked to the tracking data of the layer it is currently in. In hierarchical terms, the spline is the child of the track, even if there is no tracking data.
. When you begin to track a layer, the area of detail contained within the spline(s) you have drawn will be searched for in the next frame.
. If the planar tracker finds the same area in a following frame, it will tell the tracker to move to that point. Because the spline is linked to the track by default, it will also move along with it and the search begins again for the next frame.

To see this relationship, turn on your surface and/or grid in the viewer after you have tracked something. Scrub the timeline and you will see that the grid and surface move with the spline.

Now select all the points of your spline and move it around the viewer.  You will notice that the surface/grid will stay in the same place.

This is because the spline is linked to the track, but the track is not linked to the spline. The spline is merely a search area to tell the track where to go next. It is a common misconception that moving the spline while tracking is affecting the movement of the tracking data. It is not. Moving the spline is only telling the tracker to look in a different place and will not directly affect the motion of the tracking.

This makes the tracker very powerful, as you can move and manipulate your spline area around while tracking to avoid problem areas or add more detail for the search.

You can even unlink the spline from the track entirely so that any planar surface passing under the stationary spline area is tracked and you don't have to move the spline if tracking starts to go off screen.


=== Selecting an Area to Track

With the Planar Tracker you simply draw a spline around something, as shown with the screen below.


image::UserGuide/en_US/images/IPAD_Screen_001.jpg["IPAD_Screen_001",link="images/IPAD_Screen_001.jpg]

. Select one of the spline tools to create a shape around the outside edge of the area you wish to track.
. Start creating your shape by clicking onto the screen.
. After the third point, the shape will auto-close, but you can continue to add points.
. When drawing splines it is best to keep the shape not tight on the edge, but actually give a little space to allow for the high contrast edges to show through, as these provide good tracking data.
. Right-click to finish drawing.
. If you are using the X-Spline tool you can adjust the handles at each point by pulling them out to create a straight cornered edge, or pull them in to make them more curved. Right clicking a handle will adjust all the handles in the spline at once.

=== Dealing With Obstructions or Reflective Surfaces

In some cases there are parts of an image that can interfere with the effectiveness of the Planar Tracker. To handle this, you can create an exclusion zone in the area you are tracking.

For instance, in the phone example we are using, there are frames where there are strong reflections on the screen. These reflections can make the track jump. So we need to isolate that area so the tracker ignores it. Here's how this is done:


. Select the initial layer you created.
+
image::UserGuide/en_US/images/LayerView_Selected_001.jpg["LayerView_Selected_001",link="images/LayerView_Selected_001.jpg]

. Select the add shape tool to add an additional shape to the current layer, which selects the area you want the tracker to ignore.
+
image:UserGuide/en_US/images/ToolAddXSpline_2x.jpg[role=img-small]

. Draw this second shape inside the original shape. Note that both splines have the same color, which is an indication that they belong to the same layer. Also you will notice in the Layer Controls panel that you only have a single layer.
+
image:UserGuide/en_US/images/IPAD_Screen_002.jpg["IPAD_Screen_002",link="images/IPAD_Screen_002.jpg]

. By turning on the Mattes button under View Controls you can see the area that will be tracked.
+
image::UserGuide/en_US/images/IPAD_Screen_003.jpg["IPAD_Screen_003",link="images/IPAD_Screen_003.jpg]


You can also add as many entirely new layers on top of your tracking layer to mask out the layers below.

NOTE: The tracking layer uses the matte data of the combined layers you have drawn. This matte is the outer edge of the tracking layer matte minus the inner edge of the layers in front, regardless of feathering.

This is quite common when moving people, limbs, cars, badgers etc. get in front of the object you are trying to track.


=== Tracking Parameters

In the *Essentials* <<layouts, layout>>, tracking Motion parameters are listed in the Essentials Panel:

image:UserGuide/en_US/images/mochaae_essentials_panel.jpg[width="40%"]

In the *Classic* <<layouts, layout>>, detailed tracking parameters can be accessed by selecting the Track tab. On the left hand side of the Track tab, you will see two sections: Motion and Search Area.

image::UserGuide/en_US/images/TrackOptions_001.jpg["TrackOptions_001",link="images/TrackOptions_001.jpg]


Understanding the parameters section of the Track parameters is vitally important for obtaining good tracks. Here we provide a breakdown of each parameter and how to use it effectively.


*Input Clip*

This is the clip you are going to track. By default it is the one currently in the viewer.


*Input Channel*

When tracking, Mocha looks at contrast for detail. The input channel determines where to look for that contrast.
. Luminance looks for contrast in the light and dark of the image
. Auto Channel looks for contrast in one of the color channels.

By default, Luminance does a good job. If you have low-luminance footage or you are not getting a good track, try Auto Channel.



*Min % Pixels Used*

One of the most important parameters to look at for tracking.

By default, the minimum percentage of pixels used is dynamic. When you draw a shape, Mocha tries to determine the optimal amount of pixels to look for in order to speed up tracking. If you draw a very large shape, the percentage will be low. If you draw a small shape, the percentage will be high.

In many cases, the cause of a drifting or slipping track is a low percentage of pixels. If you want a more solid and accurate track, try setting the Min % Pixels Used value to a higher amount. Keep in mind however that a larger percentage of pixels can mean a slower track.


*Smoothing Level*

This value blurs the input clip before it is tracked. This can be useful when there is a lot of severe noise in the clip. It is left at zero by default.


*Motion*

These parameters control what motion you are looking for when you track:

* Translation: The position of the object
* Scale: Whether the object gets larger or smaller
* Rotation: The angle of rotation of the object
* Shear: How the object is skewing relative to the camera
* Perspective: How the object is moving in perspective relative to the camera
* Mesh: Movement within the overall plane, such as distortion, warp etc.

The main difference between shear and perspective is the relative motion. Shear is defined as the object warping in only two corners, whereas perspective is most often needed where the object is rotating away from the viewer significantly in space.

As an example, if someone is walking towards you, their torso would be showing shear as it rotates slightly back and forth from your point of view.

The front of a truck turning a corner in front of you would be showing significant perspective change.

* Large Motion: This is the default. It searches for motion and optimizes the track as it goes. Small Motion is also applied when you choose Large Motion.
* Small Motion: This only optimizes. You would use Small Motion if there were very subtle changes in the movement of the object you are tracking.
* Manual Tracking: This is only necessary to use when the object you are tracking is completely obscured or becomes untrackable. Usually used when you need to make some adjustments to complete the rest of the automated tracking successfully.


*Search Area*

This defines ranges for the tracker to search within

* Horizontal/Vertical: The distance of pixels in the footage to search for the next object position. This is set to Auto by default.
* Angle: If you have a fast rotating object, like a wheel, you can set an angle of rotation to help the tracker to lock onto the detail correctly. The tracker will handle a small amount of rotation, less than 10º per frame, with Angle set to zero.
* Zoom: If you have a fast zoom, you can add a percentage value here to help the tracker. Again, the tracker will still handle a small amount of zoom with this set to zero.

=== PowerMesh and Mesh Tracking [[powermesh]]

PowerMesh is designed to help track non-planar surfaces. This is for both rigid and non-rigid surfaces that would otherwise be impossible to track with a regular planar tracker.

Rather than taking an optical flow approach (which can be slow to render and produce cumbersome files), we use a subsurface planar approach which is much faster to generate and track.

IMPORTANT: PowerMesh tracking currently does not support Stereo

==== Mesh Generation

To track a mesh, you first need to generate one.

The initial process is as follows:


1. Draw a layer around the area you want to track +
image:UserGuide/en_US/images/powermesh_tracking_001.jpg[width="40%"]
2. Choose the planar tracking parameters (translation, rotation, scale, shear and/or perspective)
3. Then choose the “Mesh” parameter +
image:UserGuide/en_US/images/powermesh_tracking_002.jpg[width="40%"]

An initial Mesh is generated.

image:UserGuide/en_US/images/powermesh_tracking_003.jpg[width="40%"]

Then you can refine your PowerMesh with the following parameters.

image:UserGuide/en_US/images/powermesh_generation_column.jpg[width="40%"]

*Generation Mode*

This dropdown contains two options:

* *Automatic:* This determines the best mesh to use based on image information contained in the layer. Automatic is best paired with “Adaptive Contrast” to get the most detail.
* *Uniform:* Generates a uniform square mesh insead of building based on the existing image.

*Mesh Size*

Mesh Size is the distance between vertices in pixels.

This means that the smaller the Mesh Size, the more potential mesh faces you will have. The larger the Mesh Size, the larger the faces and the less faces you will have.

A good starting point for Mesh Size is 32 for a HD or 4K image.

*Vertices on Spline*

This option makes sure the PowerMesh is generated to the boundaries of your layer spline, rather than just over the most interesting detail within it.

For uniform meshes, this option makes sure at least part of the mesh is overlapping the spline.

*Adaptive Contrast*

Adaptive Contrast boosts details in the underlying image to help the Automatic mesh generate the most useful vertices. Use with care! Sometimes you don’t want too much mesh detail.

*Generate Mesh*

This button generates the Mesh. Click it every time you change a Mesh generation parameter.

*Clear Mesh*

This button clears the Mesh from the layer.

==== Mesh Tracking

Once you have generated your mesh and you’re happy with it, you can move on to tracking.

The Mesh tracker first uses the standard planar tracking per frame and then applies the sub-planar track with the mesh.

Any mesh faces that fall outside of the spline or the image boundary are ignored. Those mesh faces become rigid and try to follow along with the existing mesh.

To perform a Mesh track:

1. Generate a mesh using the method and parameters listed above
2. Choose the planar motion parameters you want to use
3. Choose the Mesh Tracking parameters
4. Track forwards or backwards as needed

Note that choosing the Planar motion parameters is important. For example:

* If the region you are tracking has significant perspective distortion, turn on Perspective
* If the region doesn’t have much perspective shift, use Shear.
* If the region doesn’t have much planar distortion, choose the lower order motion parameters only (Translation, rotation, scale)

The Mesh Tracking parameters help control how Mocha approaches the organic surface.

image:UserGuide/en_US/images/powermesh_tracking_column.jpg[width="40%"]

*Auto Smoothness*

Turning this on tells Mocha to guess the amount of smoothness to apply to the Mesh track. See “Smoothness” below.

*Smoothness*

Also referred to as “Rigidity”, this value determines the amount of smoothness to apply to the Mesh when tracking.

* A high smoothness is like applying starch to your Mesh. It will follow the planar track more rigidly and not distort as much.
* A low smoothness will follow the subsurface movement more directly and distort the mesh more. In short, you will get more “wobble”.

As a general guideline, we recommend setting a lower smoothness for very warped or wobbly movement and a higher smoothness for more rigid objects that still have some distortion.

For example:

* Faces: This varies, but a smoothness of 50 is about the right amount to balance facial muscles vs general face planes.
* Liquid: A low smoothness (20-40) works well
* Cloth: Variable depending on the stiffness of the material

*Warp Spline*

This option deforms the spline shape to match the movement of the Mesh while tracking. This is useful so that you don’t have to worry about animating the shape to keep the mesh inside the bounds of the spline.

As an added bonus, this also means it greatly reduces the keyframes needed to rotoscope an organic object.

==== Edit Track Mesh

The Edit Track Mesh button is in the Toolbar at the top of the Mocha interface.

image:UserGuide/en_US/images/ToolEditMesh.jpg[]

Selecting this turns on subselection in your mesh and you can move or delete vertices either before or after you have tracked the mesh.

To get out of Edit mode, click the normal selection tool.

After Tracking, You can animate the tracked mesh manually to fix points or make your preferred adjustments.
Animated meshes are keyframed for the whole set of vertices, rather than individual points. This makes it easier to keyframe states over time, similar to the spline default animation mode.

*Add Vertex*

image:UserGuide/en_US/images/ToolAddVertex.jpg[]

This tool appears when in Edit Mesh mode. When Add Vertex is on, click any Mesh edge to add a new vertex. A new edge will appear joining the created vertex and the vertex opposite.


==== Exporting Meshes or Mesh Warped Splines

Using PowerMesh, you can export:

* Mesh-warped splines (or render their mattes): Export as normal for Shape data.
* After Effects nulls (Adobe plugin only): In the Adobe plugin, there is a new section called "PowerMesh". Use this section to create nulls from selected layers. See <<powermesh_nulls, Creating PowerMesh Nulls>> for more details.
* Alembic tracking data as a mesh: The exports from the "Tracking Data" export options. Alembic is supported across many hosts. The data format includes the PowerMesh and a camera that fits to the source footage. See <<export_alembic, Exporting to Alembic>> for more details.


==== Tips for Mesh Tracking

*Blue mesh faces*

When tracking, if one of your mesh faces turns blue, this means the face has become flipped, normally because the area you are tracking has turned away from the camera.

*Use more than one contour*

You can use more than one contour to cut holes in the mesh generation. This is helpful if you want to ignore details in a surface, such as teeth in a mouth region or a tattoo that is taking up too much of the mesh detail.


=== Tracking the Spline

Before performing the actual track, adjust the settings depending on the movement in the clip.

Track the plane selected by pressing the Track Forwards button on the right- hand side of the transport controls section.

image::UserGuide/en_US/images/ICON_TrackPlaybar_001.jpg["ICON_TrackPlaybar_001",link="images/ICON_TrackPlaybar_001.jpg]

Stop the track and adjust the shape if it doesn't seem to be tracking properly. You may keyframe the spline shape so that it tracks only the planar region of a shape by adjusting the shape and hitting Add Key in the keyframe controls menu. Keep in mind that no initial keyframe is set until you first hit Add Key or move a point with Auto-Key turned on.

=== Checking Your Track

The spline should be tracked in addition to the clip being cached to RAM. You can play it back and get an idea as to how the track went. F
eel free to change the playback mode in the transport controls to loop or ping-pong your track.

Another trick you can do to check your track is hit the Stabilize button in the View Controls.

image::UserGuide/en_US/images/Stabilize_2x.jpg["Stabilize_2x.jpg",link="images/Stabilize_2x.jpg]

Turning on Stabilize will lock the tracked item in place, moving the image to compensate. In the track module, stabilize view is a preview mode to check your track. Actual stabilization output is handled by the Stabilize Module, explained in the Stabilize Overview chapter.

==== The Surface
You can check the accuracy of your planar track by turning on the Surface (the dark blue rectangle) and Grid overlay in the Essentials panel or the toolbar:

image::UserGuide/en_US/images/ShowSurface_2x.jpg[]

* Drag the inner corners of the Surface to match the perspective of your tracked plane.
* Drag the edges of the Surface to adjust them along the matched perspective
* Drag the points in the middle of the edges to scale horizontally or vertically
* Click and drag the outer corners to rotate the Surface
* Hold SHIFT and drag a corner to scale uniformly.

If you play the clip, you should see the surface or grid line up perfectly with the plane you tracked.

IMPORTANT: *The Surface and Grid have no keyframes; they are simply guides that let you check the accuracy of your track. Note that the position of the Surface WILL affect the exported tracking data, so you MUST position the corners of the Surface before exporting tracking data.*

Click on the Surface button in the Essentials panel or the toolbar.

image::UserGuide/en_US/images/ShowSurface_2x.jpg[]

When you turn on the surface you will see the blue box that represents the 4 points of the corner-pin. Right now you will see that it is not lined up with the screen.

image::UserGuide/en_US/images/IPAD_Screen_004.jpg["IPAD_Screen_004",link="images/IPAD_Screen_004.jpg]

As described above, by selecting each corner one at a time you can adjust the surface area to cover the area of the screen,
or you can use the middle points to scale and the outer corners to rotate.

image::UserGuide/en_US/images/IPAD_Screen_005.jpg["IPAD_Screen_005",link="images/IPAD_Screen_005.jpg]

The Grid overlay should line up with the plane you're tracking and move with it as you cycle through the clip. You can change the density of the grid by adjusting the X and Y grid values in View | Viewer Preferences:

image::UserGuide/en_US/images/GRIDDividers_001.jpg["GRIDDividers_001",link="images/GRIDDividers_001.jpg]

The grid overlay can give you a quick representation of the accuracy of the track.

image::UserGuide/en_US/images/IPAD_Screen_006.jpg["IPAD_Screen_006",link="images/IPAD_Screen_006.jpg]

The Trace feature allows you to see the position of the planar corners over time. Skip allows you to work with only every nth frame, useful on particularly long roto shots where the movement is predictable.

image::UserGuide/en_US/images/IPAD_Screen_007.jpg["IPAD_Screen_010",link="images/IPAD_Screen_007.jpg]


IMPORTANT: *When you track a layer, the mattes of any active layers above the layer itself are subtracted from the matte of the layer and hence influence the area being tracked. To keep your tracking predictable, it is recommended that you keep your tracking layers on the top of the stack unless you specifically wish to use other layers to subtract from the tracking area of layers beneath it.*

To monitor what the tracker "sees" as a tracking area, select the Track Matte button in the view control.

=== Importing Mattes

There may be instances where you have already created mattes for one or more objects in the shot, for example using a keyer or another roto tool that would help you isolate areas to track. You can import such mattes by creating a new layer and then using the Matte Clip setting under Layer Properties to assign it to the layer.


=== Tips for Tracking


*Scrub your timeline*

When starting a new project, go through your footage a few times to see what your best options are for tracking. You will save yourself a lot of time by making note of obstructions and possible problem areas in advance.



*Use edges*

When tracking surfaces you will usually get a much better track if you include the edges and not just the interior of an object. This is because Mocha can define the difference between the background and the foreground and lock on better.

For example, if you are tracking a greenscreen, it is better to draw your shape around the entire screen rather than just the internal tracking markers. In some cases this means you can avoid tracking markers altogether and save time on cleanup later.



*When in doubt, ramp up your pixels*

You can quite often get a great result with default settings, but if you're getting a lot of drift, try setting the Min % Pixels Used value higher. The processing can be slower, but you will usually get a much more solid track.



*Draw more shapes*

Remember you are not limited to one shape in a layer. Use a combination of shapes to add further areas or cut holes in existing areas to maximize your search. If necessary, make an additional layer to track and mask out foreground obstructions before tracking the object you need.



*Use the grid while tracking*

It's common to use the surface and the grid to line up your corners after you track, but it can be much more advantageous to set up your surface before you track and leave the grid on to watch for any subtle drift while you are tracking. This way you can stop your track early to fix any issues and spend less time trying to find them later.



*Track from the largest, clearest point*

In order for Mocha to keep the best possible track, it is usually best to scrub through the timeline and find the largest and clearest area to begin tracking from, draw your shape there, then use backwards and forward tracking from that point.

For example, if you have a shot of sign coming toward you down a freeway, it is usually better to start at the end of the clip where the sign is largest, draw your shape and track backwards, rather than start from the beginning of the clip.



*A planar surface does not necessarily have to be flat*

We have a Planar Tracker which specifically tracks planes of motion, but this is not limited to tables, walls and other flat objects.

Distant background is considered flat by the camera where there is no parallax. Faces can be tracked very successfully around the eyes and bridge of the nose. Rocky ground, rumpled cushions, clumps of bushes, human torsos and curved car bodies are all good candidates. The key is low parallax or no obvious moving depth.

When in doubt, try quickly tracking an area to see if it will work, as you can quite often trick the planar tracker into thinking something is planar.



*In the end, there is no magic bullet*

Mocha is a very flexible tracker and will save a lot of time, but you will eventually run into a piece of footage that just will not track. Large or continuous obstructions, extreme blur, low contrast details and sudden flashes can all cause drift or untrackable situations.

If something just isn't tracking no matter what you try, consider using Mocha to track as much as possible then move to manual work. You can often get a lot more done fixing shots by hand or using AdjustTrack in Mocha rather than trying to tweak your shapes and parameters over and over again to get everything done automatically.
